--- a/wp-content/themes/storevilla/style.css
+++ b/wp-content/themes/storevilla/style.css
@@ -969,8 +969,8 @@ header nav css
 }
 .top-header .top-navigation ul li {
     float: left;
-    font-size:11px;
-    font-family:Open Sans;
+    font-size:12px;
+    letter-spacing:-1px;
     text-transform: uppercase;
     margin-right:15px;
     padding:10px 0;
@@ -1023,7 +1023,6 @@ quickinfo css
 .top-header ul.store-quickinfo li {
     margin-right:5px;
     font-size:11px;
-    font-family:Open Sans;
     text-transform: uppercase;
 }
 .top-header ul.store-quickinfo li,
@@ -1044,8 +1043,7 @@ top-header-regin css
 */
 .top-header .top-header-regin {
     float:right;
-    font-size:11px;
-    font-family:Open Sans;
+    font-size:12px;
     text-transform: uppercase;
     position: relative;
 }
@@ -1084,7 +1082,7 @@ top-header-regin css
     font-family:FontAwesome;
     font-size:11px;
     left: -15px;
-    top:11px;
+    top:12px;
 }
 .top-header .top-header-regin a.sv_login {
     position: relative;
@@ -1140,6 +1138,7 @@ top-header-regin css
     position: relative;
 }
 .top-header-regin ul li span.cart-count {
+  font-family:'Lato',sans-serif;
   background: #f06363 none repeat scroll 0 0;
   border-radius: 100%;
   color: #fff;
@@ -2024,7 +2023,6 @@ ul.add-to-links li a, ul.add-to-links li a.button {
     padding:10px;
     line-height:1.5;
     font-size: 11px;
-    font-family: 'Lato';
     font-weight: 400;
     position: relative;
     color:#666;
@@ -2163,14 +2161,14 @@ product-button-wrap and button css
     margin: 0 0 15px;
 }
 .woocommerce #respond input#submit, .woocommerce button.button, .woocommerce input.button {
-    font-weight: 700;
-    font-family: Lato;
+    font-weight: 600;
     font-size: 10px;
     text-transform: uppercase;
     border-radius:0;
     color: #fff;
     padding: 10px 10px;
     display: inline-block;
+    letter-spacing:-1px;
     line-height: 1.4;
     -webkit-transform: translateZ(0px);
     transform: translateZ(0px);
@@ -3538,7 +3536,7 @@ blog post css
 .single-product div[itemprop="description"] p {
     margin-bottom: 10px;
     color:#555;
-    font-size:14px;
+    font-size:15px;
 }
 .single-product div[itemprop="description"] {
     color: #8b8b8b;
