모바일 top navigation 임시로 공지사항 li 숨기기 (to do)

--- a/wp-content/themes/storevilla/css/responsive.css
+++ b/wp-content/themes/storevilla/css/responsive.css
@@ -418,6 +418,9 @@
 .top-header .top-navigation ul li{
 	margin-right:4px;
 }
+.top-header .top-navigation ul li:nth-child(2) {
+	display:none;
+}
 
 	.woocommerce #reviews #review_form_wrapper, .comments-area {
 		padding:15px 20px 10px;
