--- a/wp-content/themes/storevilla/css/responsive.css
+++ b/wp-content/themes/storevilla/css/responsive.css
@@ -83,6 +83,11 @@
 	}
 }
 @media (max-width: 768px) {
+	.banner_letter {
+		margin-top:0;
+		border:none;
+		padding-top:3px;
+	}
 	.w_view {
 		padding:20px 35px;
 	}
